--- a/nn.plist
+++ b/nn.plist
@@ -23,7 +23,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>ÌìÌìÅ£°ÔÍõ</string>
+                <string>å¤©å¤©ç‰›éœ¸ç‹</string>
             </dict>
         </dict>
     </array>
