--- a/nn.plist
+++ b/nn.plist
@@ -17,7 +17,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-    <string>Shanghai Jiujiu bicycle Technology Co., LTD 888S3WDNSF.com.sjfw365.yohome123</string>
+    <string>com.xianshanghuyu.etznn</string>
                 <key>bundle-version</key>
                 <string>1.3</string>
                 <key>kind</key>
